feat: finish task

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1 class="about__title title">Привет!<br>Я Анжелика Степанова<br>И я <span class="title__profession">Frontend-разработчик</span></h1>
                 <p class="about__text">Я только начинаю мой путь, но на моём счету<br>
                     уже N проектов</p>
-                <button class="about__button">Узнать больше</button>
+                <button class="about__button button">Узнать больше</button>
             </div>
             <div class="about__photo">
                 <img class="img" src="./assets/my-photo.png" alt="my photo"/>
@@ -76,8 +76,22 @@
                 </div>
             </div>
            </div>
+           <div class="contacts">
+            <h2 class="contacts__title section__title">Связаться</h2>
+            <div class="contacts__inputs">
+                <input type="text" placeholder="Имя" class="input name">
+                <input type="tel" placeholder="Телефон" class="input phone">
+            </div>
+            <button class="contacts__button button">Узнать больше</button>
+           </div>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <a href="https://github.com/AngelOk1990" class="footer__link">AngelOk1990</a>
+    <div class="footer-copyright">
+        <span>©</span>
+        <span>2022</span>
+    </div>
+</footer>
     <script src="index.js"></script>
 </body>
 </html>
