--- a/index.html
+++ b/index.html
@@ -14,46 +14,54 @@
         <a href="https://github.com/AngelOk1990" class="header__link">AngelOk1990</a>
         <nav class="navigation__menu">
             <ul class="navigation__list">
-                <li class="navigation__link">
-                    <a href=""></a>Обо мне
+                <li>
+                    <a class="navigation__link"href="#about">Обо мне</a>
                 </li>
-                <li class="navigation__link">
-                    <a href=""></a>Подробнее
+                <li>
+                    <a class="navigation__link"href="#skills">Подробнее</a>
                 </li>
-                <li class="navigation__link">
-                    <a href=""></a>Проекты
+                <li>
+                    <a class="navigation__link"href="#projects">Проекты</a>
                 </li>
-                <li class="navigation__link">
-                    <a href=""></a>Связаться
+                <li>
+                    <a class="navigation__link"href="#contacts">Связаться</a>
                 </li>
             </ul>
         </nav>
        </div>
     </header>
     <main>
-        <div class="section__about">
+        <div class="section__about" id="about">
             <div class="line"></div>
            <div class="about__container about">
             <div class="about__me"> 
                 <h1 class="about__title title">Привет!<br>Я Анжелика Степанова<br>И я <span class="title__profession">Frontend-разработчик</span></h1>
                 <p class="about__text">Я только начинаю мой путь, но на моём счету<br>
                     уже N проектов</p>
-                <button class="about__button button">Узнать больше</button>
+                    <button class="about__button button">
+                        <a class="btn__link"href="#projects">Узнать больше</a>
+                    </button>
             </div>
             <div class="about__photo">
                 <img class="img" src="./assets/my-photo.png" alt="my photo"/>
             </div>
            </div>
            <div class="icons">
+            <a href="#contacts">
             <img src="./assets/Телеграм.png" class="icons__telegram" alt="telegram">
+        </a>
+        <a href="#contacts">
             <img src="./assets/Почта.png" class="icons__mail" alt="mail">
-            <img src="./assets/Телефон.png" class="icons__phone" alt="phone">
+        </a>
+            <a href="#contacts">
+                <img src="./assets/Телефон.png" class="icons__phone" alt="phone">
+            </a>
         </div>
            </div>
-           <div class="skills">
+           <div class="skills" id="skills">
             <h2 class="skills__title section__title">Кто я и что умею?</h2>
             <h3 class="skills__subtitle">Обо мне подробнее:</h3>
-            <p class="skills__text">Я училась на фронтенд-разработчика самостоятельно и занимаюсь веб-разработкой уже несколько месяцев.<br>Надеюсь, что это юудет не просто хобби, а выйдет на более серьёзный уровень. Мне нравится создавать удобные<br> и функциональные сайты, осваиваить новые техники, браться за сложные и интересные задачи. Моя цель-<br>реализовать проект, сделав его комфортным как для заказчика, так и для пользователя.</p>
+            <p class="skills__text">Я училась на фронтенд-разработчика на курсах RS School и продолжаю учиться самостоятельно каждый день.<br>Веб-разработкой я занимаюсь уже полгода. Надеюсь, что это перерастет в мою будущую профессию. Мне нравится видеть<br>сразу результат того, что я создаю, и я не собираюсь останавливаться. Впереди еще много интересных и функциональных<br>проектов, новых техник, знаний и возможностей.</p>
             <h3 class="skills__subtitle last">Мои навыки:</h3>
             <div class="skills__buttons btn">
                 <button class="btn__skill first">HTML</button>
@@ -62,7 +70,7 @@
                 <button class="btn__skill fourth">Figma</button>
             </div>
            </div>
-           <div class="projects">
+           <div class="projects" id="projects">
             <h1 class="projects__title section__title">Мои проекты</h1>
             <div class="projects__list">
                 <div class="projects__item">
@@ -76,13 +84,15 @@
                 </div>
             </div>
            </div>
-           <div class="contacts">
+           <div class="contacts" id="contacts">
             <h2 class="contacts__title section__title">Связаться</h2>
             <div class="contacts__inputs">
                 <input type="text" placeholder="Имя" class="input name">
                 <input type="tel" placeholder="Телефон" class="input phone">
             </div>
-            <button class="contacts__button button">Узнать больше</button>
+            <button class="contacts__button button">
+                <a class="btn__link" href="#about">Узнать больше</a>
+            </button>
            </div>
     </main>
     <footer class="footer">
@@ -92,6 +102,5 @@
         <span>2022</span>
     </div>
 </footer>
-    <script src="index.js"></script>
 </body>
 </html>
