--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,93 +9,97 @@
     <title>Summary</title>
 </head>
 <body>
-    <header class="header">
-       <div class="header__navigation navigation">
-        <a href="https://github.com/AngelOk1990" class="header__link">AngelOk1990</a>
-        <nav class="navigation__menu">
-            <ul class="navigation__list">
-                <li>
-                    <a class="navigation__link" href="#about">Обо мне</a>
-                </li>
-                <li>
-                    <a class="navigation__link" href="#skills">Подробнее</a>
-                </li>
-                <li>
-                    <a class="navigation__link" href="#projects">Проекты</a>
-                </li>
-                <li>
-                    <a class="navigation__link" href="#contacts">Связаться</a>
-                </li>
-            </ul>
-        </nav>
-       </div>
-    </header>
-    <main>
-        <div class="section__about" id="about">
-            <div class="line"></div>
-           <div class="about__container about">
-            <div class="about__me"> 
-                <h1 class="about__title title">Привет!<br>Я Анжелика Степанова<br>И я <span class="title__profession">Frontend-разработчик</span></h1>
-                <p class="about__text">Я только начинаю мой путь, но на моём счету<br>
-                    уже N проектов</p>
-                        <a class="btn__link" href="#projects">Узнать больше</a>
-            </div>
-            <div class="about__photo">
-                <img class="img" src="./assets/my-photo.png" alt="my photo"/>
-            </div>
+    <div class="wrapper">
+        <header class="header">
+           <div class="header__navigation navigation">
+            <a href="https://github.com/AngelOk1990" class="header__link">AngelOk1990</a>
+            <nav class="navigation__menu">
+                <ul class="navigation__list">
+                    <li>
+                        <a class="navigation__link" href="#about">Обо мне</a>
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="#skills">Подробнее</a>
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="#projects">Проекты</a>
+                    </li>
+                    <li>
+                        <a class="navigation__link" href="#contacts">Связаться</a>
+                    </li>
+                </ul>
+            </nav>
            </div>
-           <div class="icons">
-            <a href="#contacts">
-            <img src="./assets/Телеграм.png" class="icons__telegram" alt="telegram">
-        </a>
-        <a href="#contacts">
-            <img src="./assets/Почта.png" class="icons__mail" alt="mail">
-        </a>
-            <a href="#contacts">
-                <img src="./assets/Телефон.png" class="icons__phone" alt="phone">
-            </a>
-        </div>
-           </div>
-           <div class="skills" id="skills">
-            <h2 class="skills__title section__title">Кто я и что умею?</h2>
-            <h3 class="skills__subtitle">Обо мне подробнее:</h3>
-            <p class="skills__text">Я училась на фронтенд-разработчика на курсах RS School и продолжаю учиться самостоятельно каждый день.<br>Веб-разработкой я занимаюсь уже полгода. Надеюсь, что это перерастет в мою будущую профессию. Мне нравится видеть<br>сразу результат того, что я создаю, и я не собираюсь останавливаться. Впереди еще много интересных и функциональных<br>проектов, новых техник, знаний и возможностей.</p>
-            <h3 class="skills__subtitle last">Мои навыки:</h3>
-            <div class="skills__buttons btn">
-                <button class="btn__skill first">HTML</button>
-                <button class="btn__skill second">CSS</button>
-                <button class="btn__skill third">JavaScript</button>
-                <button class="btn__skill fourth">Figma</button>
-            </div>
-           </div>
-           <div class="projects" id="projects">
-            <h1 class="projects__title section__title">Мои проекты</h1>
-            <div class="projects__list">
-                <div class="projects__item">
-                    <a href="https://angelok1990.github.io/cssMemSlider/cssMemSlider/"><img src="./assets/css-mem-slider.png" alt="css-mem-slider" class="slider" width="330" height="220"/></a>
+        </header>
+        <main>
+            <div class="section__about" id="about">
+                <div class="line"></div>
+               <div class="about__container about">
+                <div class="about__me">
+                    <h1 class="about__title title">Привет!<br>Я Анжелика Степанова<br>И я <span class="title__profession">Frontend-разработчик</span></h1>
+                    <p class="about__text">Я только начинаю мой путь, но на моём счету<br>
+                        уже N проектов</p>
+                            <a class="btn__link" href="#projects">Узнать больше</a>
                 </div>
-                <div class="projects__item">
-                    <a href="https://angelok1990.github.io/virtual-keyboard/"><img src="./assets/virtual-keyboard.png" alt="virtual-keyboard" class="keyboard"  width="330" height="220"/></a>
+                <div class="about__photo">
+                    <img class="img" src="./assets/my-photo.png" alt="my photo"/>
                 </div>
-                <div class="projects__item">
-                    <a href="https://rolling-scopes-school.github.io/angelok1990-JSFE2022Q1/shelter"><img src="./assets/shelter.png" alt="shelter" class="shelter"  width="330" height="220"/></a>
+               </div>
+               <div class="icons">
+                    <a href="https://t.me/Anzhelik90">
+                        <img src="./assets/Телеграм.png" class="icons__telegram" alt="telegram">
+                    </a>
+                    <a href="mailto:pandafree@mail.ru">
+                         <img src="./assets/Почта.png" class="icons__mail" alt="mail">
+                    </a>
+                    <a href="tel:+79523752142">
+                          <img src="./assets/Телефон.png" class="icons__phone" alt="phone">
+                    </a>
+               </div>
+            </div>
+               <div class="skills" id="skills">
+                  <h2 class="skills__title section__title">Кто я и что умею?</h2>
+                  <h3 class="skills__subtitle">Обо мне подробнее:</h3>
+                  <p class="skills__text">Я училась на фронтенд-разработчика на курсах RS School и продолжаю учиться самостоятельно каждый день.<br>Веб-разработкой я занимаюсь уже полгода. Надеюсь, что это перерастет в мою будущую профессию. Мне нравится видеть<br>сразу результат того, что я создаю, и я не собираюсь останавливаться. Впереди еще много интересных и функциональных<br>проектов, новых техник, знаний и возможностей.</p>
+                  <h3 class="skills__subtitle last">Мои навыки:</h3>
+                  <div class="skills__buttons btn">
+                    <button class="btn__skill first">HTML</button>
+                    <button class="btn__skill second">CSS</button>
+                    <button class="btn__skill third">JavaScript</button>
+                    <button class="btn__skill fourth">Figma</button>
+                  </div>
+               </div>
+               <div class="projects" id="projects">
+                  <h1 class="projects__title section__title">Мои проекты</h1>
+                  <div class="projects__list">
+                    <div class="projects__item">
+                        <a href="https://angelok1990.github.io/cssMemSlider/cssMemSlider/"><img src="./assets/css-mem-slider.png" alt="css-mem-slider" class="slider" width="330" height="220"/></a>
+                    </div>
+                    <div class="projects__item">
+                        <a href="https://angelok1990.github.io/virtual-keyboard/"><img src="./assets/virtual-keyboard.png" alt="virtual-keyboard" class="keyboard"  width="330" height="220"/></a>
+                    </div>
+                    <div class="projects__item">
+                        <a href="https://rolling-scopes-school.github.io/angelok1990-JSFE2022Q1/shelter"><img src="./assets/shelter.png" alt="shelter" class="shelter"  width="330" height="220"/></a>
+                    </div>
                 </div>
-            </div>
-           </div>
-           <div class="contacts" id="contacts">
-            <h2 class="contacts__title section__title">Связаться</h2>
-            <div class="contacts__inputs">
-                <input type="text" placeholder="Имя" class="input name">
-                <input type="tel" placeholder="Телефон" class="input phone">
-            </div>
-                <a class="btn__link" href="#about">Узнать больше</a>
-           </div>
-    </main>
+               </div>
+               <div class="contacts" id="contacts">
+                  <h2 class="contacts__title section__title">Связаться</h2>
+                  <div class="contacts__inputs">
+                    <input type="text" placeholder="Имя" class="input name">
+                    <input type="tel" placeholder="Телефон" class="input phone">
+                  </div>
+                    <a class="btn__link" href="#about">Узнать больше</a>
+               </div>
+        </main>
+    </div>
     <footer class="footer">
+        <div class="footer__container">
         <a href="https://github.com/AngelOk1990" class="footer__link">AngelOk1990</a>
     <div class="footer-copyright">
         <span>©</span>
         <span>2022</span>
+    </div>
     </div>
 </footer>
 </body>
